--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,46 @@
+@import url("https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&display=swap");
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+::-webkit-scrollbar-track {
+  background-color: #fff;
+  border: none;
+}
+::-webkit-scrollbar-track:hover {
+  background-color: #fff;
+  border: none;
+}
+::-webkit-scrollbar-thumb {
+  background: #000;
+  border-radius: 5px;
+  border-radius: 25px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #000;
+}
+::placeholder {
+  color: #fff;
+  letter-spacing: 0.2rem;
+}
+
+.full-container {
+  max-width: unset !important;
+}
+
+h2::after {
+  display: block;
+  height: 4px;
+  background-color: #87ceeb;
+  content: " ";
+  border-radius: 2px;
+  width: 100px;
+  margin-top: 20px;
+}
 /* For Header */
 .navbar {
   font-size: 1.25rem;
-  background-color: transparent !important;
+  background-color: #fff !important;
   height: 4rem;
   transition: background 0.25s ease-in-out;
 }
@@ -9,10 +48,10 @@
 .nav-brand {
   font-size: 1.8rem;
   margin-right: 15vw;
-  transform: translateY(-5px);
+  transform: translateY(-4px);
 }
 .vasu {
-  font-weight: 200;
+  font-weight: 300;
   display: inline-block;
   text-shadow: 0px 0px 1.5px #000;
 }
@@ -20,22 +59,69 @@
   font-size: 0.9rem !important;
 }
 .navbar-light .navbar-nav .nav-link {
-  color: var(--white) !important;
+  color: #000 !important;
   position: relative;
   font-weight: 500;
 }
 .nav-link:before {
   content: "";
   position: absolute;
-  width: 83%;
+  width: 85%;
+  transform: translateX(-3px);
   height: 2px;
   bottom: 0;
   left: 5;
-  background-color: var(--white);
+  background-color: #000;
   transform: scaleX(0);
   transition: all 0.3s ease-in-out;
 }
 .nav-link:hover:before {
   visibility: visible;
   transform: scaleX(1);
+}
+
+/* For Footer */
+
+.footer {
+  background-color: black;
+  height: fit-content;
+}
+.footer-content {
+  color: #ffd500;
+  text-align: center;
+}
+
+.newsletter-input {
+  width: 50vw;
+  border-radius: 20vw;
+  background-color: #808080;
+  opacity: 0.3;
+  z-index: 100;
+  height: 6vh;
+  border: none;
+  padding: 20px 20px;
+}
+input,
+select,
+textarea {
+  color: #fff;
+}
+.newsletter-input:active {
+  border: none;
+}
+
+.newsletter-button {
+  width: 10vw;
+  height: 6vh;
+  border-radius: 5vw;
+  background-color: #87ceeb;
+}
+
+.footer-bottom {
+  background-color: rgba(128, 128, 128, 0.3);
+  font-size: 0.8rem;
+  opacity: 0.7;
+  z-index: 100;
+  height: 6vh;
+  color: #fff;
 }
