--- a/client/src/components/css/home.css
+++ b/client/src/components/css/home.css
@@ -1,5 +1,22 @@
-
 .landing img {
   width: 100vw;
   height: 90vh;
+  position: relative;
+}
+.landing-audio {
+  background-color: transparent !important;
+}
+
+.about-img {
+  width: 50vw;
+  height: 70vh;
+}
+
+.about-icons {
+  font-size: 1.5rem;
+}
+
+.about-quote {
+  font-weight: 500;
+  text-align: left;
 }
