--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,7 +31,7 @@
 h2::after {
   display: block;
   height: 4px;
-  background-color: #87ceeb;
+  background-color: #00b9c6;
   content: " ";
   border-radius: 2px;
   width: 100px;
@@ -62,6 +62,10 @@ h2::after {
   color: #000 !important;
   position: relative;
   font-weight: 500;
+}
+.navbar-light .navbar-nav .nav-link.active {
+  color: #fff !important;
+  background-color: rgba(0, 0, 0, 0.7) !important;
 }
 .nav-link:before {
   content: "";
@@ -124,4 +128,8 @@ textarea {
   z-index: 100;
   height: 6vh;
   color: #fff;
+}
+
+.footer-icons {
+  font-size: 1.3rem;
 }
