--- a/client/src/components/css/home.css
+++ b/client/src/components/css/home.css
@@ -110,3 +110,20 @@
   box-shadow: none !important;
   border: none;
 }
+
+.album {
+  background-color: black;
+  border-radius: 15px;
+  width: 85vw;
+  height: 85vh;
+  box-shadow: 5px 5px 15px #000;
+}
+
+.album-sub {
+  color: #00b9c6;
+}
+
+.album-heading {
+  font-size: 1.8rem;
+  font-weight: 700;
+}
