--- a/client/src/components/css/blog.css
+++ b/client/src/components/css/blog.css
@@ -1,3 +1,15 @@
 .blog-title-input {
   height: 6vh;
 }
+
+.blog-card {
+  height: 50vh;
+  width: 75vw;
+
+}
+
+.blog-img {
+  width: 25vw;
+  height: 40vh;
+  margin-top: 5vh;
+}
