--- a/client/src/App.css
+++ b/client/src/App.css
@@ -350,3 +350,10 @@ textarea {
   margin-left: 5vw;
   height: 70vh;
 }
+.main-page-player{
+  width: 55vw;
+  height: 66vh;
+}
+.white-text{
+  color: white;
+}
