--- a/client/src/App.css
+++ b/client/src/App.css
@@ -344,16 +344,49 @@ textarea {
   z-index: 200;
 }
 
+.map-cont{
+  height: 70vh;
+  width: 80vw;
+}
 
+.youtube-heading{
+  background-color:#000000;
+  width: 100%;
+  height: 60vh !important;
+  margin: auto;
+  margin-top: 0px !important;
+  background-repeat: no-repeat;
+  color: #fff;
+  background-position-y: bottom;
+}
 .youtube-page-player{
-  width: 90vw;
-  margin-left: 5vw;
+  width: 70vw;
+  margin-left: 15vw;
   height: 70vh;
 }
 .main-page-player{
-  width: 55vw;
-  height: 66vh;
+  width: 52vw;
+  height: 70vh;
 }
 .white-text{
   color: white;
+}
+
+
+.youtube-page-thumb{
+  margin-left: 5vw;
+  margin-right: 3vw;
+}
+
+.youtube-content{
+  cursor: pointer;
+}
+
+.page-item.active .page-link{
+  background-color: rgba(0, 0, 0, 1) !important;
+  color: #fff !important;
+  border-color: #fff !important;
+}
+.page-link{
+   color:rgba(0, 0, 0, 1) !important;
 }
