--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,6 +41,22 @@ h2::after {
 .courses-offered::after {
   width: auto;
 }
+
+.loader {
+  border: 5px solid #f3f3f3; /* Light grey */
+  border-top: 5px solid #000; /* Blue */
+  border-bottom: 5px solid black;
+
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 /* For Header */
 .navbar {
   font-size: 1.25rem;
@@ -115,15 +131,21 @@ h2::after {
 }
 
 .newsletter-input {
-  width: 50vw;
+  width: 15vw;
   border-radius: 20vw;
   background-color: #808080;
-  opacity: 0.3;
+  opacity: 0.7;
   z-index: 100;
   height: 6vh;
   border: none;
   padding: 20px 20px;
+  color: #fff;
 }
+
+.newsletter-input::placeholder{
+  color: #fff;
+}
+
 .newsletter-input input,
 select,
 textarea {
