--- a/client/src/App.css
+++ b/client/src/App.css
@@ -66,7 +66,7 @@ h2::after {
 }
 
 .nav-brand {
-  font-size: 1.8rem;
+  font-size: 2.5rem;
   margin-right: 15vw;
   transform: translateY(-4px);
 }
@@ -374,10 +374,11 @@ textarea {
 .youtube-heading{
   background-color:#000000;
   width: 100%;
-  height: 60vh !important;
+  height: 125vh !important;
   margin: auto;
   margin-top: 0px !important;
   background-repeat: no-repeat;
+  clip-path: polygon(0 0, 100% 0%, 100% 85%, 70% 100%,0% 85%);
   color: #fff;
   background-position-y: bottom;
 }
