--- a/client/src/components/css/faq.css
+++ b/client/src/components/css/faq.css
@@ -7,9 +7,10 @@
 }
 
 .faq-heading {
-  background-color: var(--dark);
+  background-color: #000;
   width: 100%;
-  height: 60vh !important;
+  height: 100vh !important;
+  clip-path: polygon(0 0,10% 0%, 100% 8%,100% 90%, 70% 100%,0% 85%);
   margin: auto;
   margin-top: 0px !important;
   background-repeat: no-repeat;
