--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,6 +20,15 @@
   background: #000;
 }
 
+.header-family{
+font-family: var( --e-global-typography-primary-font-family ), Sans-serif;
+color: #191a1f;
+font-size: 2.8em;
+font-weight: 500;
+text-transform: uppercase;
+
+
+}
 .full-container {
   max-width: unset !important;
 }
@@ -37,6 +46,10 @@ h2::after {
   border-radius: 2px;
   width: 100px;
   margin-top: 20px;
+}
+.courses-offered
+{
+  font-weight: 500;
 }
 .courses-offered::after {
   width: auto;
