--- a/client/src/App.css
+++ b/client/src/App.css
@@ -84,7 +84,7 @@ h2::after {
   font-weight: 500;
 }
 .navbar-light .navbar-nav .nav-link.active {
-  color: #fff !important;
+  color: #FFA500 !important;
   background-color: rgba(0, 0, 0, 0.7) !important;
   border-radius: 10px !important;
 }
