--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,6 +19,10 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #000;
 }
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+body{
+  font-family: 'Open Sans', sans-serif;
+}
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 .header-family{
 font-family: Montserrat,Sans-serif;
@@ -27,8 +31,6 @@ color: #191a1f;
 font-size: 2.8em;
 font-weight: 700;
 text-transform: uppercase;
-
-
 }
 .full-container {
   max-width: unset !important;
